<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/form_transacao_valor"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/valor"
            android:inputType="numberDecimal"
            android:textSize="12dp"
            android:layout_marginTop="10dp"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="10dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/form_transacao_data"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:focusable="false"
            android:hint="@string/data"
            android:inputType="none"
            android:textSize="12dp"
            tools:text="11/20/2014" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/categoria"
        android:textColor="#7b7b7b"
        android:textSize="12dp" />

    <Spinner
        android:id="@+id/form_transacao_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>